# ralph-loop-optimizer

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  pyproject.toml
examples/cifar10-cnn/: AGENTS.md  README.md  evaluate.py  model.py  train_config.py
examples/toy-benchmark/: AGENTS.md  README.md  evaluate.py  strategy.py
examples/toy-benchmark/tests/: test_strategy_contract.py
examples/us-stock-strategy/: AGENTS.md  README.md  evaluate.py  requirements.txt  strategy.py
examples/us-stock-strategy/tests/: test_backtest.py
src/ralph_loop_optimizer/: __init__.py  artifacts.py  brief.py  brief_review.py  cli.py  config.py  context.py  evaluation.py  git.py  harness.py  lessons.py  orchestrator.py  processes.py  progress.py  resume.py
src/ralph_loop_optimizer/backends/: __init__.py  base.py  claude.py  codex.py  registry.py
tests/: test_artifacts.py  test_backends.py  test_brief.py  test_brief_review.py  test_cli.py  test_config.py  test_context.py  test_end_to_end.py  test_evaluation.py  test_examples.py  test_git.py  test_harness.py  test_lessons.py  test_orchestrator.py  test_processes.py  test_progress.py  test_real_cli_availability.py  test_real_cli_backends.py  test_resume.py
