[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-loop-optimizer"
version = "0.1.0"
description = "Local CLI for running AI-assisted optimization loops over harness repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Ralph Loop Optimizer contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
ralph-loop = "ralph_loop_optimizer.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "real_cli: opt-in tests that invoke installed AI CLI backends"
]
